Bug 451499 - wrong folder icon appears on smart bookmarks, r=dietrich